Adding final Year presentation

--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/final-year-project-defense-m2lse.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/final-year-project-defense-m2lse.tex
@@ -17,7 +17,7 @@
 \usepackage{xcolor,colortbl}
 \definecolor{LightCyan}{rgb}{0.88,1,1}
 \usepackage[toc,page]{appendix}
-
+\usepackage[framemethod=tikz]{mdframed}
 
 \author{Jugurtha BELKALEM}
 \title{Debugging Linux OS \\ \vspace{20px} }
@@ -150,6 +150,9 @@ Jalil \textsc{boukhobza} % Supervisor's Name
 \end{titlepage}
 
 \tableofcontents
+
+
+\include{internship-acknowledgement}
 
 \include{internship-introduction}
 
