--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
@@ -1,11 +1,24 @@
-\section{Internship objectives}
+\section{General view of internship}
 
-\textbf{SMILE} (\textbf{{\color{blue}https://www.smile.eu/en}}) is the 1st integrator and European expert in open source solutions. 
+\subsection{Introducing company}
+\textbf{SMILE} (\textbf{\color{blue}\url{https://www.smile.eu/en}}) is the 1st integrator and European expert in open source solutions. 
+
+SMILE advertises 4 different services :
+\begin{enumerate}
+	\item \textbf{DIGITAL : } creates websites, mobile apps and collaborative software. 
+	\item \textbf{BUSINESS APPS : } which collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
+	\item \textbf{EMBEDDED \& IOT : } which builds software for innovative smart objects.
+	\item \textbf{OUTSOURCING : } ports data into private cloud computing. 
+\end{enumerate}
+
 
 \begin{center} \color{red}
-I'm part of ECS (\textit{Embedded and Connected Systems}) division which builds software for innovative smart objects.
+I'm part of \textbf{EMBEDDED \& IOT} division.
 \end{center}
 
+\textbf{SMILE} has over than 1300 employees (\textbf{Smilers}) across 7 different countries (\textit{France, Belgium, Switzerland, Luxembourg, Netherlands, Ukraine and Morocco}).
+
+\subsection{Internship objectives}
 In order to offer the best experience for \textbf{SMILE}'s clients, We require :
 
 \begin{itemize}
@@ -13,18 +26,20 @@ In order to offer the best experience for \textbf{SMILE}'s clients, We require :
 \item[$\bullet$] Troubleshoot errors that raise during production. 
 \item[$\bullet$] Pointing-out sources of latencies (\emph{disk, network, scheduler, ..., etc}), memory leaks, kernel panics and many more.
 \item[$\bullet$] Handle potential malicious code infections and being able to respond.
-\end{itemize}  
-\vspace{15px}
+\end{itemize}
+
+  
+\subsection{Internship pre-requests}
 
 The pre-requests of the internship are : 
 \begin{itemize}
 	\item[$\ast$] {Good skills on C/C++ and Python.}
-	\item[$\ast$] {Working on Linux environment.}
+	\item[$\ast$] {Working on Linux environment, basic Linux kernel is recommended.}
 	\item[$\ast$] {Background electrical and electronics engineering concepts}
 \end{itemize}
 
 
-\vspace{15px}
+\subsection{Internship requirements}
 The request document of the intership stressed out on experimenting and documenting the following points :
 
 \begin{enumerate}
@@ -39,8 +54,6 @@ Those tracers must be compared  to choose the appropriate one for a particular s
 	
 	\item \textbf{Documentation : } providing step by step manual for every tool to be used by engineers at project's developement lifecycle and maintenance.
 \end{enumerate}
-
-
 
 
 \begin{center}\Large
