--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-means.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-means.tex
@@ -1,10 +1,10 @@
 \section{Available equipements}
-Debugging Linux is a challenging task which requires a good preparation.
-\subsection{Hardware}
+Debugging Linux is a challenging task which requires a good preparation. In this section We present a global overview of some of the equipement used during the internship.
+\subsection{Hardware platforms}
 
 
 \subsubsection{Beagle Bone Black Wireless} 
-The evolution of beaglebone black which adds wireless support (WIFI, Bluetooth) and fast linux boot (\textbf{Figure \ref{Beaglebone black wireless}}). 
+The evolution of beaglebone black which adds wireless support (WIFI, Bluetooth) and fast linux boot (see \textbf{Figure \ref{Beaglebone black wireless}}). 
 		\begin{figure}[H]
 			\centering
         	\includegraphics[scale=0.25]{img/mean/beaglebone-black-wireless.png}
@@ -12,8 +12,8 @@ The evolution of beaglebone black which adds wireless support (WIFI, Bluetooth) 
         	\label{Beaglebone black wireless}
     	\end{figure}
 \begin{center}
-\textbf{\color{red}Hardware specifications} 
-A datasheet is available at : {\color{blue}\url{https://www.alliedelec.com/m/d/5505861ee370de1c82065dcc7bc77b0c.PDF}}.
+\textbf{\color{red}Hardware specifications : } 
+A datasheet is available at {\color{blue}\url{https://www.alliedelec.com/m/d/5505861ee370de1c82065dcc7bc77b0c.PDF}}.
 \end{center}
 
 \subsubsection{Raspberry PI 3 B+}
@@ -26,38 +26,50 @@ The lastest version as this time of writing with enhanced processor and ethernet
     	\end{figure}
     	
 \begin{center}	
-\textbf{\color{red}Hardware specifications} 
-A datasheet is available at : {\color{blue}\url{https://static.raspberrypi.org/files/product-briefs/Raspberry-Pi-Model-Bplus-Product-Brief.pdf}}.
+\textbf{\color{red}Hardware specifications : } 
+A datasheet is available at {\color{blue}\url{https://static.raspberrypi.org/files/product-briefs/Raspberry-Pi-Model-Bplus-Product-Brief.pdf}}.
 \end{center}
 
 
-\subsubsection{stm32f407 Board : } (\textbf{Figure \ref{stm32f407 Board}})  specifications are available at : {\color{blue}\url{https://www.st.com/content/ccc/resource/technical/document/user_manual/70/fe/4a/3f/e7/e1/4f/7d/DM00039084.pdf/files/DM00039084.pdf/jcr:content/translations/en.DM00039084.pdf}}
+\subsubsection{stm32f407 Board : } Used to build high performance applications oriented for audio processing (see \textbf{Figure \ref{stm32f407 Board}}).  
 		\begin{figure}[H]
 			\centering
         	\includegraphics[scale=0.08]{img/mean/stm-32.jpg}
         	\caption{stm32f407 Board}
         	\label{stm32f407 Board}
     	\end{figure}
+    	
+\textbf{\color{red}Specifications are available at :} can be found at {\color{blue}\url{https://www.st.com/content/ccc/resource/technical/document/user_manual/70/fe/4a/3f/e7/e1/4f/7d/DM00039084.pdf/files/DM00039084.pdf/jcr:content/translations/en.DM00039084.pdf}}    	
 
 
-\subsubsection{AT32UC3C-EK Board : } (\textbf{Figure \ref{AT32UC3C Board}}) see the following link for spefications :  {\color{blue}\url{http://www.farnell.com/datasheets/1511964.pdf}} 
+\subsubsection{AT32UC3C-EK Board : }
+A developement kit for Atmel AVR microcontrolers (see \textbf{Figure \ref{AT32UC3C Board}}).  
 		\begin{figure}[H]
 			\centering
         	\includegraphics[scale=0.40]{img/mean/avr32.jpeg}
         	\caption{AT32UC3C Board}
         	\label{AT32UC3C Board}
     	\end{figure}
+    	
+    	\textbf{\color{red}Hardware spefications :}  available at {\color{blue}\url{http://www.farnell.com/datasheets/1511964.pdf}}
 
-\subsubsection{ARM-USB-TINY-H JTAG Adapter : }  OpenOCD debugging interface adapter (see \textbf{Figure \ref{ARM-USB-TINY-H}}).
+\subsubsection{ARM-USB-TINY-H JTAG Adapter : }  OpenOCD debugging interface adapter that uses the FTDI protocol (see \textbf{Figure \ref{ARM-USB-TINY-H}}).
 		\begin{figure}[H]
 			\centering
         	\includegraphics[scale=0.25]{img/mean/arm-usb-tiny-h.jpg}
         	\caption{ARM-USB-TINY-H}
         	\label{ARM-USB-TINY-H}
     	\end{figure}
-{\color{blue}\url{https://www.olimex.com/Products/ARM/JTAG/_resources/ARM-USB-TINY_and_TINY_H_manual.pdf}}
+Usage is described at : {\color{blue}\url{https://www.olimex.com/Products/ARM/JTAG/_resources/ARM-USB-TINY_and_TINY_H_manual.pdf}}\\
+
+\textbf{\color{orange}Note : } OpenOCD supports multiple adapter protocols (ftdi, cmsis-dap, amt\_jtagaccel, remote\_bitbang, ..., etc). We can check the complet list at : {\color{blue}\url{http://openocd.org/doc/html/Debug-Adapter-Configuration.html#Debug-Adapter-Configuration}}. 
 \subsection{Software}
-\subsubsection{pycharm}
-Pycharm is a python IDE, which makes developement fast.
-\subsubsection{Eclipse C/C++}
-Code examples were written maily in C, Eclipse C/C++ was helpful. 
+
+
+\subsubsection{Pycharm IDE}
+Pycharm is a python IDE, which makes developement fast. Examples of projects developed made in Python is an \textbf{OpenOCD wrapper} utility \og OESdebug \fg at : {\color{blue}\url{https://github.com/jugurthab/Linux_kernel_debug/tree/master/DebugSoftware/OpenOCD-wrapper}}.
+\subsubsection{Eclipse C/C++ IDE}
+Code examples were written maily in C, Eclipse C/C++ was helpful. Code are hosted on github at : {\color{blue}\url{https://github.com/jugurthab/Linux_kernel_debug/tree/master/debug-examples}}.
+
+\subsubsection{OpenOCD}
+Open source software allowing Hardware debugging, sources at maintained at : {\color{blue}\url{https://sourceforge.net/projects/openocd/files/openocd/}}.
