1st Review of intership report

--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/final-year-project-defense-m2lse.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/final-year-project-defense-m2lse.tex
@@ -118,7 +118,7 @@ Jugurtha \textsc{BELKALEM}\\[3cm] % Your name
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Tutor :}\\
-David \textsc{GARIOU} % Your name rubini
+David \textsc{GARRIOU} % Your name rubini
 \end{flushleft}
 \end{minipage}
 %~
