--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-introduction.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-introduction.tex
@@ -4,11 +4,11 @@
 Such a success was made possible since those tiny devices rely on UNIX-like operating systems (\textbf{Linux is the dominant}). 
 
 \begin{itemize}
-	\item[$\bullet$] \textbf{Open Source : } Sources are available and maintained by a large community, the latest stable version is available at {\color{blue}\url{https://www.kernel.org/}}\footnote{The lastest version (not stable) is available at Linus github : {\color{blue}sfdfd}}.
+	\item[$\bullet$] \textbf{Open Source : } Linux kernel sources are maintained by a large community, the latest stable version is available at {\color{blue}\url{https://www.kernel.org/}}\footnote{The lastest version (not stable) is available at Linus github : {\color{blue}\url{https://github.com/torvalds/linux}}}.
 	
 	\item[$\bullet$] \textbf{Not specific to vendor : } Linux is not propriatary operating system. We can point that major big companies are collaborators in it's developement.
 	
-	\item[$\bullet$] \textbf{Architecture support : } Linux supports many architectures (x86, arm, mips, ..., etc).
+	\item[$\bullet$] \textbf{Architecture support : } Linux supports many architectures such as x86, arm, mips, ..., etc.
 	
 	\item[$\bullet$] \textbf{Low developement cost : } Linux is free. 
 \end{itemize}
