--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-means.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-means.tex
@@ -43,7 +43,7 @@ A datasheet is available at {\color{blue}\url{https://static.raspberrypi.org/fil
 
 
 \subsubsection{AT32UC3C-EK Board : }
-A developement kit for Atmel AVR microcontrolers (see \textbf{Figure \ref{AT32UC3C Board}}).  
+An old developement kit for Atmel AVR microcontrolers (see \textbf{Figure \ref{AT32UC3C Board}}).  
 		\begin{figure}[H]
 			\centering
         	\includegraphics[scale=0.40]{img/mean/avr32.jpeg}
