--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
@@ -5,10 +5,10 @@
 
 SMILE advertises 4 different services :
 \begin{enumerate}
-	\item \textbf{DIGITAL : } creates websites, mobile apps and collaborative software. 
-	\item \textbf{BUSINESS APPS : } which collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
+	\item \textbf{DIGITAL : } a division which creates websites, mobile apps and collaborative software. 
+	\item \textbf{BUSINESS APPS : } the service collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
 	\item \textbf{EMBEDDED \& IOT : } which builds software for innovative smart objects.
-	\item \textbf{OUTSOURCING : } ports data into private cloud computing. 
+	\item \textbf{OUTSOURCING : } specialized in private cloud computing. 
 \end{enumerate}
 
 
@@ -24,7 +24,7 @@ In order to offer the best experience for \textbf{SMILE}'s clients, We require :
 \begin{itemize}
 \item[$\bullet$] Test our solutions before production to detect faulty code and anticipate bugs.
 \item[$\bullet$] Troubleshoot errors that raise during production. 
-\item[$\bullet$] Pointing-out sources of latencies (\emph{disk, network, scheduler, ..., etc}), memory leaks, kernel panics and many more.
+\item[$\bullet$] Point-out sources of latencies (\emph{disk, network, scheduler, ..., etc}), memory leaks, kernel panics and many more.
 \item[$\bullet$] Handle potential malicious code infections and being able to respond.
 \end{itemize}
 
@@ -43,12 +43,12 @@ The pre-requests of the internship are :
 The request document of the intership stressed out on experimenting and documenting the following points :
 
 \begin{enumerate}
-	\item \textbf{Userspace debugging methodologies : } maily for C/C++ (using GDB, strace, ptrace, ltrace, valgrind)
+	\item \textbf{Userspace debugging methodologies : } mainly for C/C++ (using GDB, strace, ptrace, ltrace, valgrind)
 	
-	\item \textbf{Kernel-land code debugging : } using KGDB/KDB, kernel oops, magic SysRQ, OpenOCD (with focus on it's syntax).
+	\item \textbf{Kernel-land code debugging : } using KGDB/KDB, kernel oops, magic SysRQ, OpenOCD (with a focus on it's syntax).
 	
 	\item \textbf{Tracing and profiling : } to increase software quality, instrumentation must be used with tools like : \textbf{Ftrace (trace-cmd)}, \textbf{Perf} and \textbf{LTTng}.\\
-Those tracers must be compared  to choose the appropriate one for a particular situation.
+Those tracers must be compared  between each others to choose the appropriate one for a particular situation.
 
 	\item \textbf{Testing platforms : } known boards must be used (\textit{Raspberry PI 3}, \textit{Beagle bone black wireless} and \textit{I.MX6}).
 	
